--- a/index.html
+++ b/index.html
@@ -417,7 +417,69 @@
 							<div class='col-section-header' >
 								<h2>Easily embed a cool video for your app</h2>
 								<p>
-									No dolorem blandit theophrastus eos, nam eu persecuti repudiandae, duo hinc vide aliquip et. Ex atqui voluptatibus eum, cu case intellegebat eum, mea ex regione patrioque signiferumque. Pri ei solet graecis. 
+									Política de Privacidade
+
+Jose Niquisse construiu o aplicativo MC como um aplicativo Freemium. Este serviço é fornecido por Jose Niquisse, sem nenhum custo e é destinado para uso como é.
+
+Esta página é usada para informar os visitantes sobre minhas políticas com a coleta, uso e divulgação de Informações Pessoais, caso alguém decida usar o meu Serviço.
+
+Se você optar por usar o meu Serviço, você concorda com a coleta e uso de informações em relação a esta política. As Informações Pessoais que eu coleciono são usadas para fornecer e melhorar o Serviço. Não usarei nem compartilharei suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
+
+Os termos usados nesta Política de Privacidade têm os mesmos significados que os nossos Termos e Condições, que estão acessíveis no MC, a menos que definido de outra forma nesta Política de Privacidade.
+
+Coleta e Uso de Informações
+
+Para uma melhor experiência, ao usar nosso Serviço, eu posso exigir que você nos forneça algumas informações pessoalmente identificáveis, incluindo, mas não se limitando a Nome, E-mail e Telefone. As informações que eu solicito serão retidas no seu dispositivo e não serão coletadas por mim de nenhuma maneira.
+
+O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo.
+
+Link para a política de privacidade de provedores de serviços de terceiros usados pelo aplicativo
+
+Google Play Services
+
+Dados de Log
+
+Quero informá-lo que sempre que você usar o meu serviço, no caso de um erro no aplicativo eu coletar dados e informações (através de produtos de terceiros) em seu telefone chamado Log Data. Esses dados de registro podem incluir informações como o endereço IP do dispositivo, o nome do dispositivo, a versão do sistema operacional, a configuração do aplicativo ao utilizar meu serviço, a hora e a data do seu uso do serviço e outras estatísticas. .
+
+
+Biscoitos
+
+Cookies são arquivos com uma pequena quantidade de dados que são comumente usados como identificadores exclusivos anônimos. Estes são enviados para o seu navegador a partir dos sites que você visita e são armazenados na memória interna do seu dispositivo.
+
+Este serviço não usa esses “cookies” explicitamente. No entanto, o aplicativo pode usar código de terceiros e bibliotecas que usam “cookies” para coletar informações e melhorar seus serviços. Você tem a opção de aceitar ou recusar esses cookies e saber quando um cookie está sendo enviado para o seu dispositivo. Se você optar por recusar nossos cookies, talvez não consiga usar algumas partes deste Serviço.
+
+Provedores de serviço
+
+Eu posso empregar empresas e indivíduos de terceiros devido às seguintes razões:
+
+1.	Para facilitar nosso serviço;
+2.	Para fornecer o serviço em nosso nome;
+3.	Para executar serviços relacionados a serviços; ou
+4.	Para nos ajudar a analisar como nosso Serviço é usado.
+Quero informar aos usuários deste Serviço que esses terceiros têm acesso às suas informações pessoais. O motivo é executar as tarefas atribuídas a eles em nosso nome. No entanto, eles são obrigados a não divulgar ou usar as informações para qualquer outra finalidade.
+
+Segurança
+
+Eu valorizo a sua confiança em nos fornecer suas informações pessoais, por isso estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-los. Mas lembre-se de que nenhum método de transmissão pela internet ou método de armazenamento eletrônico é 100% seguro e confiável, e não posso garantir sua segurança absoluta.
+
+Links para outros sites
+
+Este Serviço pode conter links para outros sites. Se você clicar em um link de terceiros, você será direcionado para esse site. Observe que esses sites externos não são operados por mim. Por isso, recomendo vivamente que reveja a Política de Privacidade destes sites. Não tenho controle e não me responsabilizo pelo conteúdo, políticas de privacidade ou práticas de quaisquer sites ou serviços de terceiros.
+
+Privacidade infantil
+
+Estes Serviços não abordam ninguém com idade inferior a 13 anos. Não recolho intencionalmente informações de identificação pessoal de crianças com menos de 13 anos. Caso eu descubra que uma criança com menos de 13 anos me forneceu informações pessoais, excluo imediatamente isso de nossos servidores. Se você é pai / mãe ou responsável legal e sabe que seu filho nos forneceu informações pessoais, entre em contato comigo para que eu possa tomar as providências necessárias.
+
+Alterações a esta política de privacidade
+
+Eu posso atualizar nossa Política de Privacidade de tempos em tempos. Assim, aconselhamos que você revise esta página periodicamente para quaisquer alterações. Vou notificá-lo de quaisquer alterações publicando a nova Política de Privacidade nesta página. Essas alterações são efetivadas imediatamente após serem publicadas nesta página.
+
+Contate-Nos
+
+Se tiver alguma questão ou sugestão sobre a minha Política de Privacidade, não hesite em contactar-me em Maputo.
+
+Esta página de política de privacidade foi criada em privacypolicytemplate.net e modificada / gerada pelo App Privacy Policy Generator
+
 								</p>
 							</div>
 						</div>
