--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 									<i class='ion-ios-heart-outline' ></i>
 								</div>
 								<div class='content' >
-									<h4>Made With Love</h4>
+									<h4>Exames</h4>
 									<p>
-										Lorem ipsum dolor sit amet, in quodsi vulputate pro. Ius illum vocent mediocritatem an, cule dicta iriure.
+										Escolha o seu exame, resolve e acompanhe a resolução passo a passo, com se estivesse com seu professor.
 									</p>
 								</div>
 							</div>
@@ -171,9 +171,10 @@
 									<i class='ion-ios-loop' ></i>
 								</div>
 								<div class='content' >
-									<h4>Regular Updates</h4>
+									<h4>Simulados</h4>
 									<p>
-										Lorem ipsum dolor sit amet, in quodsi vulputate pro. Ius illum vocent mediocritatem an, cule dicta iriure.
+										prepare-se para sua prova, praticando com simulados do aplicativo. As questões estão organizados por 
+										capítulo, encontre resolução passo a passo de cada questão do simulado.
 									</p>
 								</div>
 							</div>
@@ -184,9 +185,10 @@
 									<i class='ion-ios-pie-outline' ></i>
 								</div>
 								<div class='content' >
-									<h4>Better Reports</h4>
+									<h4>Resumos</h4>
 									<p>
-										Lorem ipsum dolor sit amet, in quodsi vulputate pro. Ius illum vocent mediocritatem an, cule dicta iriure.
+										encontre resumos por capítulo, podes ler em qualquer lugar sem necessidade de se conectar com a internet. 
+										Baixe o se resumo favorito e visualize em offline..
 									</p>
 								</div>
 							</div>
