--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class='col-md-6 col-md-push-6' >
 							<div class='phone' >
 								<div class='phone-img' >
-									<img src='img/phone1.png' alt>
+									<img src='img/0.jpg' alt>
 								</div>
 							</div>
 						</div>
