--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 							<div class='inner' >
 								<img src='img/screens/1.jpg' alt>
 								<div class='overlay' >
-									<a href='img/screens/1.jpg' class='view-btn' >
+									<a href='img/0.jpg' class='view-btn' >
 										<i class='ion-ios-plus-empty' ></i>
 									</a>
 								</div>
@@ -274,7 +274,7 @@
 							<div class='inner' >
 								<img src='img/screens/2.jpg' alt>
 								<div class='overlay' >
-									<a href='img/screens/2.jpg' class='view-btn' >
+									<a href='img/phone1.png' class='view-btn' >
 										<i class='ion-ios-plus-empty' ></i>
 									</a>
 								</div>
