--- a/termo.html
+++ b/termo.html
@@ -55,7 +55,7 @@
 							<ul class="menu">
 								<a></a><li><a href="index.html" target="_self">Home</a></li><li>
 								<a href="features.html" target="_self">Funcionalidades</a></li><li>
-								<a href="testimonials.html" target="_self">Políticas de privacidade</a></li><li>
+								<a href="politica.html" target="_self">Políticas de privacidade</a></li><li>
 								<a href="termo.html" target="_self">Termos e condições </a></li><li>
 								<a href="contact.html" target="_self">Sobre nos</a></li>
 							</ul>
